# WPW_qa_guru_10_python

./: .env.example  pyproject.toml
project/data/: cars.py  users.py
project/pages/ui_pages/: main_page.py
scheme/: auth_scheme.json
tests/ui/: conftest.py  test_autodoc_auth_user.py
utils/: attach.py  logger.py  resource.py  validator_json.py
